<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.Registration">

    <include layout="@layout/toolbar"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/logo"
            android:layout_marginTop="10dp"
            android:layout_marginStart="35dp"
            />

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/EnterUsername"
            android:textColor="@color/grey_700"
            android:drawableStart="@drawable/person"
            android:layout_below="@id/imgLogo"
            android:padding="12dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:maxLines="1"/>
        <EditText
            android:id="@+id/etEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_address"
            android:textColor="@color/grey_700"
            android:drawableStart="@drawable/email"
            android:layout_below="@id/etUsername"
            android:padding="12dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:maxLines="1"/>
        <EditText
            android:id="@+id/etMobileNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_mobile_number"
            android:textColor="@color/grey_700"
            android:drawableStart="@drawable/mobile"
            android:layout_below="@id/etEmailAddress"
            android:padding="12dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:inputType="number"
            android:maxLength="10"
            android:maxLines="1"
            />
        <EditText
            android:id="@+id/etAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/delivery_address"
            android:textColor="@color/grey_700"
            android:drawableStart="@drawable/location"
            android:layout_below="@id/etMobileNum"
            android:padding="12dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:maxLines="2"
            />
        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password"
            android:textColor="@color/grey_700"
            android:drawableStart="@drawable/location"
            android:layout_below="@id/etAddress"
            android:padding="12dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:inputType="numberPassword"
            android:maxLines="1"
            />
        <EditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:textColor="@color/grey_700"
            android:drawableStart="@drawable/lock"
            android:layout_below="@id/etPassword"
            android:padding="12dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:inputType="numberPassword"
            android:maxLines="1"
            />
        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="30dp"
            android:layout_below="@id/etConfirmPassword"
            android:text="@string/register"
            android:textColor="@color/black"
            android:textSize="20sp"
            />

    </RelativeLayout>

</LinearLayout>