<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.Login">
    <include layout="@layout/toolbar"/>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/logo"
            android:layout_marginStart="35dp"
            />

        <EditText
            android:id="@+id/etEnterMobileNum"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgLogo"
            android:hint="@string/enter_mobile_number"
            android:textColor="@color/grey_700"
            android:layout_marginStart="20dp"
            android:layout_centerHorizontal="true"
            android:textSize="18sp"
            android:inputType="number"
            android:maxLength="10"
            android:padding="12dp"
            android:drawableStart="@drawable/mobile"
            />
        <EditText
            android:id="@+id/etEnterPassword"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/etEnterMobileNum"
            android:hint="@string/enter_password"
            android:textColor="@color/grey_700"
            android:layout_margin="20dp"
            android:layout_centerHorizontal="true"
            android:textSize="18sp"
            android:inputType="numberPassword"
            android:maxLines="1"
            android:padding="12dp"
            android:drawableStart="@drawable/lock"/>
        <Button
            android:id="@+id/btnLogIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="20dp"
            android:layout_below="@id/etEnterPassword"
            android:text="@string/log_in"
            android:textColor="@color/black"
            />
        <TextView
            android:id="@+id/txtForgotPassword"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/forgot_password"
            android:layout_marginTop="10dp"
            android:layout_below="@id/btnLogIn"
            android:textColor="@color/grey_700"/>
        <TextView
            android:id="@+id/txtSignUp"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/sign_up"
            android:layout_marginTop="50dp"
            android:layout_alignParentBottom="true"
            android:textColor="@color/grey_700"/>
    </RelativeLayout>

</LinearLayout>