<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.OTP">
    <include layout="@layout/toolbar"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <EditText
            android:id="@+id/etEnterOTP"
            android:layout_centerHorizontal="true"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_otp"
            android:textColor="@color/grey_700"
            android:layout_marginTop="150dp"
            android:textSize="18sp"
            android:inputType="number"
            android:maxLength="4"
            android:padding="12dp"
            android:drawableStart="@drawable/enter"
            />
        <EditText
            android:id="@+id/etEnterPassword"
            android:layout_centerHorizontal="true"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password"
            android:textColor="@color/grey_700"
            android:layout_below="@id/etEnterOTP"
            android:layout_marginTop="20dp"
            android:drawableStart="@drawable/lock"
            android:textSize="18sp"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="12dp"
            />
        <EditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:textColor="@color/grey_700"
            android:drawableStart="@drawable/lock"
            android:layout_below="@id/etEnterPassword"
            android:padding="12dp"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textSize="18sp"/>
        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/etConfirmPassword"
            android:layout_centerHorizontal="true"
            android:text="@string/submit"
            android:textColor="@color/black"
            android:layout_marginTop="80dp"
            android:textSize="20sp"/>
    </RelativeLayout>

</LinearLayout>