<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.Forgot_Password">
    <include layout="@layout/toolbar"/>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/logo"
            android:layout_marginStart="35dp"
            />
        <EditText
            android:id="@+id/etMobileNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_mobile_number"
            android:textColor="@color/grey_700"
            android:drawableStart="@drawable/mobile"
            android:layout_below="@id/imgLogo"
            android:padding="12dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:inputType="number"
            android:maxLength="10"
            android:maxLines="1"/>
        <EditText
            android:id="@+id/etEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_address"
            android:textColor="@color/grey_700"
            android:drawableStart="@drawable/email"
            android:layout_below="@id/etMobileNum"
            android:padding="12dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:maxLines="1"/>
        <Button
            android:id="@+id/btnGetOTP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="80dp"
            android:layout_below="@id/etEmailAddress"
            android:text="@string/get_otp"
            android:textColor="@color/black"/>
    </RelativeLayout>

</LinearLayout>